third_party/WebKit/Source/core/layout/svg/LayoutSVGTransformableContainer.cpp
@@ -91,7 +91,7 @@ SVGTransformChange LayoutSVGTransformableContainer::calculateLocalTransform()
     }
 
     if (useElement) {
-        SVGLengthContext lengthContext(useElement);
+        SVGLengthContext lengthContext(element);
         FloatSize translation(
             useElement->x()->currentValue()->value(lengthContext),
             useElement->y()->currentValue()->value(lengthContext));
